--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -1,8 +1,19 @@
 version: '3.8'
 
 services:
+  reverseproxy:
+    container_name: reverseproxy
+    restart: always
+    build:
+      context: .
+      dockerfile: ./docker/reverseproxy/Dockerfile
+    ports:
+      - 8080:8080
+    volumes:
+      - ./docker/reverseproxy/nginx.conf:/etc/nginx/nginx.conf
   playground:
     container_name: playground
+    restart: always
     tty: true
     build:
       context: .
@@ -15,6 +26,7 @@ services:
       - db
   db:
     container_name: db
+    #restart: always
     build:
       context: .
       dockerfile: ./docker/db/Dockerfile
