--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -11,19 +11,6 @@ services:
       - 8080:8080
     volumes:
       - ./docker/reverseproxy/nginx.conf:/etc/nginx/nginx.conf
-  playground:
-    container_name: playground
-    restart: always
-    tty: true
-    build:
-      context: .
-      dockerfile: ./docker/playground/Dockerfile
-    ports:
-      - 3000:3000
-    volumes:
-      - playground_volumes:/workspace
-    depends_on:
-      - db
   db:
     container_name: db
     #restart: always
@@ -37,7 +24,20 @@ services:
     environment:
       POSTGRES_USER: 'postgres'
       POSTGRES_PASSWORD: 'postgres'
-
+  playground:
+    container_name: playground
+    restart: always
+    tty: true
+    build:
+      context: .
+      dockerfile: ./docker/playground/Dockerfile
+    ports:
+      - 3000:3000
+    volumes:
+      - playground_volumes:/workspace
+    depends_on:
+      - reverseproxy
+      - db
 volumes:
   playground_volumes:
   db_volumes:
