--- a/docker/reverseproxy/nginx.conf
+++ b/docker/reverseproxy/nginx.conf
@@ -3,9 +3,21 @@ events { }
 http {
     server {
         listen 8080;
-
+        server_name example.admin.com;
         location / {
-            proxy_pass http://playground:3000;
+            proxy_pass http://playground:3000/admin;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+    }
+
+    server {
+        listen 8080;
+        server_name example.main.com;
+        location / {
+            proxy_pass http://playground:3000/main;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
