--- a/docker/reverseproxy/nginx.conf
+++ b/docker/reverseproxy/nginx.conf
@@ -2,26 +2,38 @@ events { }
 
 http {
     server {
+        listen       8080;
+        server_name  localhost;
+
+        location / {
+            root   /usr/share/nginx/html;
+            index  index.html index.htm;
+        }
+    }
+
+    server {
         listen 8080;
         server_name example.admin.com;
+
         location / {
             proxy_pass http://playground:3000/admin;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+
+        location ~ ^/(_next) {
+            proxy_pass http://playground:3000;
         }
     }
 
     server {
         listen 8080;
         server_name example.main.com;
+
         location / {
             proxy_pass http://playground:3000/main;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+
+        location ~ ^/(_next) {
+            proxy_pass http://playground:3000;
         }
     }
 }
