--- a/docker/reverseproxy/nginx.conf
+++ b/docker/reverseproxy/nginx.conf
@@ -22,6 +22,12 @@ http {
         location ~ ^/(_next) {
             proxy_pass http://playground:3000;
         }
+
+        location ~*\.(?:ico|svg|woff|woff2|ttf|otf|css|js|gif|jpe?g|png)$ {
+            proxy_pass http://playground:3000;
+            add_header Pragma public;
+            add_header Cache-Control "public";
+        }
     }
 
     server {
@@ -34,6 +40,12 @@ http {
 
         location ~ ^/(_next) {
             proxy_pass http://playground:3000;
+        }
+
+        location ~*\.(?:ico|svg|woff|woff2|ttf|otf|css|js|gif|jpe?g|png)$ {
+            proxy_pass http://playground:3000;
+            add_header Pragma public;
+            add_header Cache-Control "public";
         }
     }
 }
