--- a/docker/reverseproxy/nginx.conf
+++ b/docker/reverseproxy/nginx.conf
@@ -19,6 +19,10 @@ http {
             proxy_pass http://playground:3000/admin;
         }
 
+        location ~ ^/(admin/api) {
+            proxy_pass http://playground:3000;
+        }
+
         location ~ ^/(_next) {
             proxy_pass http://playground:3000;
         }
@@ -37,6 +41,10 @@ http {
         location / {
             proxy_pass http://playground:3000/main;
         }
+
+        location ~ ^/(main/api) {
+            proxy_pass http://playground:3000;
+        } 
 
         location ~ ^/(_next) {
             proxy_pass http://playground:3000;
