--- a/docker/reverseproxy/nginx.conf
+++ b/docker/reverseproxy/nginx.conf
@@ -32,6 +32,13 @@ http {
             add_header Pragma public;
             add_header Cache-Control "public";
         }
+
+        location /_next/webpack-hmr {
+            proxy_pass http://playground:3000/_next/webpack-hmr;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "upgrade";
+        }
     }
 
     server {
@@ -54,6 +61,13 @@ http {
             proxy_pass http://playground:3000;
             add_header Pragma public;
             add_header Cache-Control "public";
+        }
+
+        location /_next/webpack-hmr {
+            proxy_pass http://playground:3000/_next/webpack-hmr;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "upgrade";
         }
     }
 }
